# nhl-data-py

./: .gitignore  .pre-commit-config.yaml  README.md  error_messages.py  pyproject.toml
.github/workflows/: black.yml  checks.yml
nhl_api/core/: api_test.py  decorators.py  nhl_api.py  response.py
nhl_api_dir/core/: api_test.py  nhl_api.py
nhl_api_py/core/: api.py  models.py  utils.py
nhl_api_py/models/: base.py  game.py  schedule.py  team.py
nhl_data_py/: __init__.py
nhl_data_py/nhl_api/: error_exceptions.py  nhl_api.py  response.py
nhl_web_app/: manage.py
nhl_web_app/nhl_web_app/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: run_web_app.sh
tests/nhl_api/: test_decorators.py  test_nhl_api.py  test_response.py
tests/nhl_api_py/: test_decorators.py  test_models.py  test_nhl_api.py  test_response.py  test_utils.py
tests/nhl_api_py/models/: test_game.py  test_schedule.py  test_team.py
