[tool.poetry]
name = "nhl-data-py"
version = "0.1.0"
description = ""
authors = ["Kyle Kohnen <github@kylekohnen.com>"]
readme = "README.md"
packages = [{include = "nhl_data_py"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = {extras = ["d"], version = "^22.10.0"}
pylint = "^2.15.4"
pytest = "^7.1.3"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
