[tool.poetry]
name = "nhl-data-py"
version = "0.1.0"
description = ""
authors = ["Kyle Kohnen <github@kylekohnen.com>"]
readme = "README.md"
packages = [{include = "nhl_data_py"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = {extras = ["d"], version = "^22.10.0"}
pylint = "^2.15.4"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
responses = "^0.22.0"
isort = "^5.10.1"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
log_cli = "True"
log_cli_level = "DEBUG"
log_format = "[%(asctime)s.%(msecs)04d] %(levelname)s [%(name)s.%(funcName)s:%(lineno)d] %(message)s"
log_date_format = "%Y-%m-%d %I:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
